[Add] 2nd place sol, student ID [Mod] title

--- a/refs.bib
+++ b/refs.bib
@@ -19,6 +19,14 @@ Previous work
   note         = {Kaggle discussion}
 }
 
+@misc{2ndplace,
+  author       = {Guanshuo Xu},
+  title        = {2nd place solution with code and data},
+  year         = {2023},
+  howpublished = {\url{https://www.kaggle.com/competitions/llm-detect-ai-generated-text/discussion/470395}},
+  note         = {Kaggle discussion}
+}
+
 @misc{5thplace,
   author       = {James Day},
   title        = {0.963 with BERT - Transformers love diverse data},
